bin_PROGRAMS = meshvpn

meshvpn_SOURCES = encryption/rsa.c encryption/crypto.c encryption/dh.c
meshvpn_SOURCES += p2p/idsp.c p2p/auth.c p2p/nodeid.c p2p/nodedb.c
meshvpn_SOURCES += p2p/peeraddr.c p2p/peermgt.c p2p/authmgt.c p2p/packet.c
meshvpn_SOURCES += p2p/dfrag.c p2p/p2psec.c p2p/netid.c p2p/seq.c
meshvpn_SOURCES += platform/io.c platform/seccomp.c platform/perms.c
meshvpn_SOURCES += platform/ifconfig.c
meshvpn_SOURCES += app/init.c app/loop.c app/config.c app/util.c app/map.c
meshvpn_SOURCES += app/logging.c app/console.c
meshvpn_SOURCES += ethernet/checksum.c ethernet/ndp6.c ethernet/switch.c
meshvpn_SOURCES += ethernet/virtserv.c
meshvpn_SOURCES += meshvpn.c
